k8s/petclinic.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${DOCKER_NAME}-service
  namespace: prod-1
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ${DOCKER_NAME}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DOCKER_NAME}
  namespace: prod-1
  labels:
    app: ${DOCKER_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${DOCKER_NAME}
  template:
    metadata:
      labels:
        app: ${DOCKER_NAME}
    spec:
      containers:
        - name: ${DOCKER_NAME}
          image: ${MY_REGISTRY}/${DOCKER_NAME}:${BUILD_TAG} 
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /livez
              port: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          volumeMounts:
            - mountPath: /bindings/secret
              name: binding
              readOnly: true
      volumes:
        - name: binding
          projected:
            sources:
              - secret:
                  name: demo-db
